feat: add --quick mode for faster benchmark runs with reduced defaults; update documentation and tests